# torchxai

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  generate_proof_images.py  index.html  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  model_support.md
.github/workflows/: ci.yml  publish.yml
advanced/: index.html
api-reference/: index.html
assets/proof/: verification_results.json
benchmarks/: benchmark_methods.py
docs/: advanced.md  api-reference.md  getting-started.md  index.md  methods.md  model-compatibility.md  troubleshooting.md
examples/: cnn_explainability.py  compare_methods.py  metrics_evaluation.py  quickstart.py  visualization_gallery.py  vit_explainability.py
getting-started/: index.html
methods/: index.html
model-compatibility/: index.html
search/: search_index.json
tests/: integration_full.py  test_core.py  test_integration_full.py  test_new_methods.py
torchxai/: __init__.py  api.py  batch.py  detection.py
torchxai/methods/: __init__.py  attention_rollout.py  base.py  eigencam.py  gradcam.py  gradcam_pp.py  integrated_gradients.py  layercam.py  rise.py  scorecam.py  smoothgrad.py  transformer_attribution.py
torchxai/metrics/: __init__.py  fidelity.py  stability.py
torchxai/models/: __init__.py  registry.py
torchxai/utils/: __init__.py  hooks.py  image.py
torchxai/viz/: __init__.py  visualize.py
troubleshooting/: index.html
